# LEFTONE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/sdl/: CMakeLists.txt  args.c  args.h  event.c  event.h  main.c
cmake/: anysrc.cmake  benum.cmake  crial.cmake  sos.cmake
core/: CMakeLists.txt
core/lobullet/: CMakeLists.txt  base.c  base.crial  base.h  bomb.c  bomb.h  linear.c  linear.h  misc.c  misc.h  pool.c  pool.h  type.h
core/lochara/: CMakeLists.txt  base.c  base.crial  base.h  big_warder.c  big_warder.h  cavia.c  cavia.h  combat.c  combat.h  encephalon.c  encephalon.h  player.c  player.h  pool.c  pool.h  state.c  state.h  strategy.c  strategy.h  theists_child.c  theists_child.h  type.h  warder.c  warder.h
core/locharacter/: CMakeLists.txt  base.c  base.h  big_warder.c  big_warder.h  big_warder.private.h  cavia.c  cavia.h  encephalon.c  encephalon.h  greedy_scientist.c  greedy_scientist.h  greedy_scientist.private.h  misc.c  misc.h  pool.c  pool.h  scientist.c  scientist.h  theists_child.c  theists_child.h  theists_child.private.h  util.c  util.h  warder.c  warder.h
core/locommon/: CMakeLists.txt  counter.c  counter.h  easing.c  easing.h  input.h  msgpack.h  null.c  null.h  physics.c  physics.h  position.c  position.h  screen.c  screen.h  ticker.c  ticker.h
core/loeffect/: CMakeLists.txt  effect.c  effect.h  generic.c  generic.h  recipient.c  recipient.crial  recipient.h  stance.c  stance.h
core/loentity/: CMakeLists.txt  bullet.c  bullet.h  character.c  character.h  decl.private.h  entity.c  entity.h  ground.h  pool.h  store.c  store.h
core/loground/: CMakeLists.txt  base.c  base.crial  base.h  island.c  island.h  misc.c  misc.h  pool.c  pool.h  type.h
core/loparticle/: CMakeLists.txt  aura.c  aura.crial  aura.h  base.c  base.crial  base.h  misc.c  misc.h  pool.c  pool.h
core/loplayer/: CMakeLists.txt  action.c  action.h  camera.c  camera.h  combat.c  combat.h  controller.c  controller.h  entity.c  entity.h  event.c  event.crial  event.h  hud.c  hud.h  menu.c  menu.h  player.c  player.crial  player.h  popup.c  popup.h  stance.c  stance.h  status.c  status.h
core/loresource/: CMakeLists.txt  font.c  font.h  language.c  language.h  music.c  music.h  set.c  set.h  sound.c  sound.h  text.c  text.h
core/loresource/font/: LICENSE-SIL.txt  README.md
core/loresource/music/: README.md
core/loresource/sound/: README.md
core/loresource/text/: jp.h
core/loscene/: CMakeLists.txt  context.c  context.h  game.c  game.h  param.h  scene.c  scene.h  title.c  title.h
core/loshader/: CMakeLists.txt  backwall.c  backwall.fshader  backwall.h  bullet.c  bullet.fshader  bullet.h  bullet.vshader  character.c  character.h  character.vshader  cinescope.c  cinescope.fshader  cinescope.h  cinescope.vshader  combat_ring.c  combat_ring.fshader  combat_ring.h  combat_ring.vshader  event_line.c  event_line.fshader  event_line.h  event_line.vshader  fog.c  fog.fshader  fog.h  fog.vshader  ground.c  ground.fshader  ground.h  ground.vshader  header.shader  hud_bar.c  hud_bar.fshader  hud_bar.h  hud_bar.vshader  hud_text.c  hud_text.fshader  hud_text.h  hud_text.vshader  (+38 more)
core/loui/: CMakeLists.txt  combat.c  combat.h  event.c  event.h  hud.c  hud.h  menu.c  menu.h  popup.c  popup.h  ui.c  ui.h
core/loworld/: CMakeLists.txt  chunk.c  chunk.h  environment.c  environment.h  generator.c  generator.h  poolset.c  poolset.h  store.c  store.h  template.c  template.h  test.h  view.c  view.h
tool/: benum.sh  bin2c.sh  crial.sh  leak-check.sh
util/: CMakeLists.txt
util/chaos/: CMakeLists.txt  abchash.c  abchash.h  xorshift.c  xorshift.h
util/coly2d/: CMakeLists.txt  README.md  hittest.c  hittest.h  shape.c  shape.h
util/container/: CMakeLists.txt  array.c  array.h  test.c
util/conv/: CMakeLists.txt  charcode.c  charcode.h
util/dictres/: CMakeLists.txt  dictres.c  dictres.h  test.c
util/flasy/: CMakeLists.txt  README.md  flasy.c  flasy.h  test.c
util/gleasy/: CMakeLists.txt  atlas.c  atlas.h  buffer.h  framebuffer.c  framebuffer.h  misc.h  program.c  program.h  shader.c  shader.h  texture.h
util/glyphas/: CMakeLists.txt  README.md  aligner.c  aligner.h  block.c  block.h  cache.c  cache.h  context.c  context.h  drawer.c  drawer.fshader  drawer.h  drawer.vshader  face.c  face.h  glyph.c  glyph.h  test.c
util/jukebox/: CMakeLists.txt  amp.c  amp.h  beep.c  beep.h  composite.c  composite.h  decoder.c  decoder.h  delay.c  delay.h  effect.c  effect.h  format.c  format.h  lowpass.c  lowpass.h  mixer.c  mixer.h  sound.c  sound.h  test.c
util/math/: CMakeLists.txt  algorithm.h  algorithm.sos.c  constant.h  matrix.h  matrix.sos.c  rational.c  rational.h  test.c  vector.c  vector.h
util/memory/: CMakeLists.txt  memory.c  memory.h  test.c
util/mpkutil/: CMakeLists.txt  README.md  file.c  file.h  get.c  get.h  pack.c  pack.h
util/parsarg/: CMakeLists.txt  parsarg.c  parsarg.h  test.c
util/statman/: CMakeLists.txt  README.md  statman.c  statman.h  test.c
