add_compile_options(${LEFTONE_C_FLAGS})

add_subdirectory(lobullet)
add_subdirectory(lochara)
add_subdirectory(locommon)
add_subdirectory(loeffect)
add_subdirectory(loentity)
add_subdirectory(loground)
add_subdirectory(loparticle)
add_subdirectory(loplayer)
add_subdirectory(loresource)
add_subdirectory(loscene)
add_subdirectory(loshader)
add_subdirectory(loui)
add_subdirectory(loworld)
