add_subdirectory(chaos)
add_subdirectory(coly2d)
add_subdirectory(container)
add_subdirectory(conv)
add_subdirectory(dictres)
add_subdirectory(gleasy)
add_subdirectory(glyphas)
add_subdirectory(jukebox)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(mpkutil)
add_subdirectory(parsarg)
