add_library(loworld
  chunk.c
  environment.c
  generator.c
  poolset.c
  store.c
  template.c
  view.c
)
target_benum_sources(loworld
  chunk.h
)
target_link_libraries(loworld
  msgpackc

  chaos
  container
  flasy
  jukebox
  math
  memory
  mpkutil

  lobullet
  lochara
  locommon
  loentity
  loground
  loparticle
  loplayer
  loresource
  loshader
)
